--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="row">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/odJ4hx6g6vBt4lBWKFD1tI8WS4x.jpg" alt="Top Gun: Maveric">
                         <div class="dsmovie-card-description">
                             <h3>Top Gun: Maveric</h3>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/14QbnygCuTO0vl7CAFmPf1fgZfV.jpg" alt="Homem Aranha: Sem volta pra casa">
                         <div class="dsmovie-card-description">
                             <h3>Homem Aranha: Sem volta pra casa</h3>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/w2PMyoyLU22YvrGK3smVM9fW1jj.jpg" alt="Capitã Marvel">
                         <div class="dsmovie-card-description">
                             <h3>Capitâ Marvel</h3>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/b0PlSFdDwbyK0cf5RxwDpaOJQvQ.jpg" alt="Batman">
                         <div class="dsmovie-card-description">
                             <h3>Batman (2022)</h3>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aJn9XeesqsrSLKcHfHP4u5985hn.jpg" alt="Guardiões da galaxia 2">
                         <div class="dsmovie-card-description">
                             <h3>Guardiões da Galaxia 2</h3>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card">
+                    <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg" alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
