--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section id="dsmovie-card-list" class="container">
 
             <div class="row">
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
@@ -43,165 +44,290 @@
                                     <img src="img/star-empty.svg" alt="star">
                                 </div>
                                 <p>10 Avaliações</p>
-                                
+
                             </div>
 
-                           <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
-                        
+
                     </div>
                 </div>
 
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/odJ4hx6g6vBt4lBWKFD1tI8WS4x.jpg"
-                            alt="Top Gun: Maveric">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
+                            alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
-                            <h3>Top Gun: Maveric</h3>
+                            <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/14QbnygCuTO0vl7CAFmPf1fgZfV.jpg"
-                            alt="Homem Aranha: Sem volta pra casa">
-                        <div class="dsmovie-card-description">
-                            <h3>Homem Aranha: Sem volta pra casa</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/w2PMyoyLU22YvrGK3smVM9fW1jj.jpg"
-                            alt="Capitã Marvel">
-                        <div class="dsmovie-card-description">
-                            <h3>Capitâ Marvel</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/b0PlSFdDwbyK0cf5RxwDpaOJQvQ.jpg"
-                            alt="Batman">
-                        <div class="dsmovie-card-description">
-                            <h3>Batman (2022)</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aJn9XeesqsrSLKcHfHP4u5985hn.jpg"
-                            alt="Guardiões da galaxia 2">
-                        <div class="dsmovie-card-description">
-                            <h3>Guardiões da Galaxia 2</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
+                    <div class="dsmovie-card transition-dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
+                            alt="Thor Amor e Trovão">
+                        <div class="dsmovie-card-description">
+                            <h3>Thor Amor e Trovão Thor Amor e Trovão Thor Amor e Trovão </h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+
+                    </div>
+                </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
                             alt="Thor Amor e Trovão">
                         <div class="dsmovie-card-description">
                             <h3>Thor Amor e Trovão</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-ful.svg" alt="star">
+                                    <img src="img/star-half.svg" alt="star">
+                                    <img src="img/star-empty.svg" alt="star">
+                                </div>
+                                <p>10 Avaliações</p>
+
+                            </div>
+
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                         </div>
+
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
-                    <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
-                            alt="Thor Amor e Trovão">
-                        <div class="dsmovie-card-description">
-                            <h3>Thor Amor e Trovão</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
 
         </section>
