--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <main>
         <section id="dsmovie-card-list" class="container">
 
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled><img src="img/arrow.svg" alt="Voltar"></button>
+                    <p>1 de 23</p>
+                    <button class="dsmovie-flip-horizontal"><img src="img/arrow.svg" alt="Proxima"></button>
+
+                </div>
+            </div>
+
             <div class="row">
 
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
