--- a/pgn-03.html
+++ b/pgn-03.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSMovie</title>
+    <title>DSMovie/pgn-03</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -28,10 +28,10 @@
 
             <div class="dsmovie-pagination-container">
                 <div class="dsmovie-pagination-box">
-                    <button disabled><img src="img/arrow.svg" alt="Voltar"></button>
-                    <p>1 de 3</p>
-                    <a href="pgn-02.html"><button class="dsmovie-flip-horizontal"><img src="img/arrow.svg" alt="Proxima"></button></a>
+                    <a href="pgn-02.html"><button><img src="img/arrow.svg" alt="Voltar"></button></a>
                     
+                    <p>3 de 3</p>
+                    <button disabled class="dsmovie-flip-horizontal"><img src="img/arrow.svg" alt="Proxima"></button>
 
                 </div>
             </div>
