--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                             </div>
 
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn" href="form_1.html">Avaliar</a>
                         </div>
 
                     </div>
@@ -65,10 +65,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
-                            alt="Thor Amor e Trovão">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/w2PMyoyLU22YvrGK3smVM9fW1jj.jpg"
+                            alt="Capitã Marvel">
                         <div class="dsmovie-card-description">
-                            <h3>Thor Amor e Trovão</h3>
+                            <h3>Capitã Marvel</h3>
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
@@ -82,7 +82,7 @@
 
                             </div>
 
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn" href="form_2.html">Avaliar</a>
                         </div>
 
                     </div>
@@ -90,10 +90,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
-                            alt="Thor Amor e Trovão">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/bQXAqRx2Fgc46uCVWgoPz5L5Dtr.jpg"
+                            alt="Adão Negro">
                         <div class="dsmovie-card-description">
-                            <h3>Thor Amor e Trovão</h3>
+                            <h3>Adão Negro</h3>
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
@@ -107,7 +107,7 @@
 
                             </div>
 
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn" href="form_3.html">Avaliar</a>
                         </div>
 
                     </div>
@@ -115,10 +115,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-3">
                     <div class="dsmovie-card transition-dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jsoz1HlxczSuTx0mDl2h0lxy36l.jpg"
-                            alt="Thor Amor e Trovão">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aJn9XeesqsrSLKcHfHP4u5985hn.jpg"
+                            alt="Guardiões da Galáxia">
                         <div class="dsmovie-card-description">
-                            <h3>Thor Amor e Trovão</h3>
+                            <h3>Guardiões da Galáxia</h3>
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
@@ -132,7 +132,7 @@
 
                             </div>
 
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn" href="form_4.html">Avaliar</a>
                         </div>
 
                     </div>
